WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222410
RemoteGraphicsContextGL ReadPixels does not preserve contents for area that is not part of the Framebuffer
https://bugs.webkit.org/show_bug.cgi?id=222410
Summary
RemoteGraphicsContextGL ReadPixels does not preserve contents for area that i...
Kimmo Kinnunen
Reported
2021-02-25 03:47:52 PST
RemoteGraphicsContext ReadPixels does not preserve contents for area that is not written When readPixels is used with source rectangle that contains areas that are not part of the Framebuffer, then the memory contents of the buffer should not be changed for that part. E.g. when doing data[0] = 77; readPixels(-1, -1, 10000000, 10000000, .., data) then data[0] should be preserved as 77 as -1,-1 is not part of the framebuffer being read. Problem since the webp->gpup does not don't transfer the buffer, but also does not risk the calculations to only populate part of the result buffer. webgl/2.0.0/conformance/reading/read-pixels-test.html [ Failure ] webgl/2.0.0/conformance2/reading/read-pixels-pack-parameters.html [ Failure ]
Attachments
Patch
(15.53 KB, patch)
2022-03-04 10:44 PST
,
John Cunningham
no flags
Details
Formatted Diff
Diff
Patch for Landing
(17.06 KB, patch)
2022-03-07 10:44 PST
,
John Cunningham
no flags
Details
Formatted Diff
Diff
Patch for Landing
(17.06 KB, patch)
2022-03-08 11:46 PST
,
John Cunningham
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-03-04 01:34:38 PST
<
rdar://problem/75025951
>
John Cunningham
Comment 2
2022-03-04 10:44:48 PST
Created
attachment 453856
[details]
Patch
Kimmo Kinnunen
Comment 3
2022-03-07 02:56:56 PST
Comment on
attachment 453856
[details]
Patch Looks good. Can you remove the entry at the bottom of LayoutTests/platform/ios-wk2/TestExpectations
webkit.org/b/234536
webgl/2.0.0/conformance/reading/read-pixels-test.html
John Cunningham
Comment 4
2022-03-07 10:44:49 PST
Created
attachment 454000
[details]
Patch for Landing
John Cunningham
Comment 5
2022-03-08 11:46:16 PST
Created
attachment 454137
[details]
Patch for Landing
EWS
Comment 6
2022-03-08 22:51:02 PST
Committed
r291032
(
248206@main
): <
https://commits.webkit.org/248206@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 454137
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug