RemoteGraphicsContextGL ReadPixels does not preserve contents for area that is not part of the Framebuffer https://bugs.webkit.org/show_bug.cgi?id=222410 <rdar://problem/75025951>

Patch by John Cunningham <johncunningham@apple.com> on 2022-03-08
Reviewed by Kimmo Kinnunen.

Source/WebKit:

Make a copy of the data buffer passed into readnpixels so that reads outside the framebuffer contain
the expected results, rather than being zero'd.

* GPUProcess/graphics/RemoteGraphicsContextGL.cpp:
(WebKit::RemoteGraphicsContextGL::readnPixels0):
(WebKit::RemoteGraphicsContextGL::readnPixels1):
* GPUProcess/graphics/RemoteGraphicsContextGL.h:
* GPUProcess/graphics/RemoteGraphicsContextGL.messages.in:
* GPUProcess/graphics/RemoteGraphicsContextGLFunctionsGenerated.h:
(bufferSubData):
(readnPixels0): Deleted.
(readnPixels1): Deleted.
* WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.cpp:
(WebKit::RemoteGraphicsContextGLProxy::readnPixels):
* WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.h:
* WebProcess/GPU/graphics/RemoteGraphicsContextGLProxyFunctionsGenerated.cpp:
(WebKit::RemoteGraphicsContextGLProxy::readnPixels): Deleted.

Tools:

Make a copy of the data buffer passed into readnpixels so that reads outside the framebuffer contain
the expected results, rather than being zero'd.

* Scripts/generate-gpup-webgl:

LayoutTests:

Don't overwrite the data buffer for readPixels

* platform/ios-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/248206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291032 268f45cc-cd09-0410-ab3c-d52691b4dbfc