Source/WebKit/GPUProcess/graphics/RemoteGraphicsContextGL.cpp
@@ -303,6 +303,20 @@ void RemoteGraphicsContextGL::simulateEventForTesting(WebCore::GraphicsContextGL
     m_context->simulateEventForTesting(event);
 }
 
+void RemoteGraphicsContextGL::readnPixels0(int32_t x, int32_t y, int32_t width, int32_t height, uint32_t format, uint32_t type, IPC::ArrayReference<uint8_t>&& data, CompletionHandler<void(IPC::ArrayReference<uint8_t>)>&& completionHandler)
+{
+    assertIsCurrent(workQueue());
+    Vector<uint8_t, 4> pixels(data);
+    m_context->readnPixels(x, y, width, height, format, type, pixels);
+    completionHandler(IPC::ArrayReference<uint8_t>(reinterpret_cast<uint8_t*>(pixels.data()), pixels.size()));
+}
+
+void RemoteGraphicsContextGL::readnPixels1(int32_t x, int32_t y, int32_t width, int32_t height, uint32_t format, uint32_t type, uint64_t offset)
+{
+    assertIsCurrent(workQueue());
+    m_context->readnPixels(x, y, width, height, format, type, static_cast<GCGLintptr>(offset));
+}
+
 } // namespace WebKit
 
 #endif
